stopped nav overlapping img

--- a/theme.css
+++ b/theme.css
@@ -90,7 +90,7 @@
 .sm_width
 {
     width: 85%;
-    max-width: calc(100% - 159px);
+    max-width: calc(100% - 174px);
     padding-right: 10px;
     
 }
